--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -456,9 +456,21 @@
                                                         <constraint firstAttribute="width" constant="35" id="lFR-Ud-OP1"/>
                                                     </constraints>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qWA-Cz-Gcc">
+                                                    <rect key="frame" x="260" y="10" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="40" id="CEW-7J-8JX"/>
+                                                        <constraint firstAttribute="width" secondItem="qWA-Cz-Gcc" secondAttribute="height" multiplier="1:1" id="FsH-6j-B8E"/>
+                                                        <constraint firstAttribute="height" constant="40" id="Uky-Dl-peN"/>
+                                                    </constraints>
+                                                    <state key="normal" image="check_off"/>
+                                                    <state key="selected" image="check_on"/>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="WG9-i0-21A" secondAttribute="trailing" constant="20" id="0hr-1s-AYF"/>
+                                                <constraint firstAttribute="trailing" secondItem="qWA-Cz-Gcc" secondAttribute="trailing" constant="20" id="E2l-wb-Nl5"/>
+                                                <constraint firstItem="qWA-Cz-Gcc" firstAttribute="centerY" secondItem="YhF-h3-tXK" secondAttribute="centerY" id="IOq-rx-69f"/>
                                                 <constraint firstItem="0FE-PV-oZd" firstAttribute="centerY" secondItem="YhF-h3-tXK" secondAttribute="centerY" id="QGV-FY-Ffm"/>
                                                 <constraint firstItem="0FE-PV-oZd" firstAttribute="leading" secondItem="YhF-h3-tXK" secondAttribute="leading" constant="10" id="SLH-6E-RMI"/>
                                                 <constraint firstAttribute="bottom" secondItem="WG9-i0-21A" secondAttribute="bottom" multiplier="2:1" id="daP-gU-ttM"/>
@@ -523,6 +535,8 @@
     </scenes>
     <resources>
         <image name="background" width="372" height="696"/>
+        <image name="check_off" width="22" height="22"/>
+        <image name="check_on" width="22" height="22"/>
         <image name="ic_avar" width="75" height="75"/>
         <image name="ic_img_alarm" width="375" height="284"/>
         <image name="ico_close" width="16" height="16"/>
